# DeepPID-ML-PID-Controllers

./: .gitignore  LICENSE  README.md  main.py  models.py  problems.py  pyproject.toml  utils.py  viz.py
.github/workflows/: ci.yml
deeppid/: __init__.py
deeppid.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
deeppid/controllers/: controllers.py
deeppid/envs/: problems.py
deeppid/scheduling/: setpoint.py
deeppid/utils/: sim.py  utils.py
docs/: USAGE.md
examples/: test.py
simulation/: app.py  quadcopter_widget.py  run.py  tanks_widget.py  ui_parts.py  visual_window.py
