
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deeppid"
version = "0.1.0"
description = "Experiments with PID and ML-based adaptive PID controllers"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name="Pieter Cawood"}, {name="Contributors"}]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "torch>=2.2"
]

[tool.setuptools.packages.find]
where = [""]
include = ["deeppid*"]
